@@ -1,3 +1,7 @@
+Tue Apr 21 15:19:10 MET DST 1998 hannes/jens
+  * gdc in Q(a) returns "not implemented" (clapsing.cc)
+  
+
 Fri Apr 17 09:53:53 MET DST 1998 hannes
  * fixed a minor but very nasty bug: nlSetMap was resetting npPrimeM
     (longrat.cc)
